--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,24 +58,26 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
+  function playSound(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`key[data-key="${e.keyCode}"]`);
     if (!audio) return; //stop the function from running all together
     audio.currentTime = 0; // rewind to the start
     audio.play();
     key.classList.add('playing');
-  });
+  }
 
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return; // skip it when it's not transform
     this.classList.remove('playing')
   }
-  
+
   const keys = document.querySelectorAll('.key');
   keys.forEach(key => key.addEventListener('transitionend', removeTransition)); //when you have an array (or a Node list in this case)
   //of elements you can't listen on all of them, you must iterate
   //when the transition ends it is removed
+
+  window.addEventListener('keydown', playSound);
 
 </script>
 
