suffix var defined

--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -66,12 +66,14 @@
     it is not necessary to convert it to an array then. */
 
     function handleUpdate () {
-      console.log(this.value);
+      const suffix = this.dataset.sizing || ''; // dataset is an object that will contain all of the data attributes from that specific element
+      // sizing || '' -> sizing or nothing becasue if I don't leave it like that we're gonna append unfefined at the end
     }
 
     inputs.forEach(input => input.addEventListener('change', handleUpdate));
     inputs.forEach(input => input.addEventListener('mousemove', handleUpdate)); /* so that the change is triggered when
     we drag things around* */
+
   </script>
 
 </body>
